manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-assistant-ui
  namespace: cloud-assistant
  labels:
        app: cloud-assistant-ui
spec:  
  replicas: 1
  selector:    
    matchLabels:
      app: cloud-assistant-ui
  template:    
    metadata:
      labels:
        app: cloud-assistant-ui
    spec:
      serviceAccountName: cloud-assistant
      containers:
      - image: cloud-assistant
        name: cloud-assistant-ui
        command:
        - /cas
        - --config=/etc/config/assistant.yaml
        - serve
        ports:
        - containerPort: 8081
          name: cloud-assi-http
        - containerPort: 8443
          name: cloud-assi-tls
        resources:
          limits:
            cpu: "5"
            memory: "4Gi"
          requests:
            cpu: "1"
            memory: "200Mi"        
        readinessProbe:
          httpGet:
            path: /
            port: 8443
            scheme: HTTPS
          failureThreshold: 2
          timeoutSeconds: 5
          periodSeconds: 1
        volumeMounts:
        - name: assistant
          mountPath: /etc/config
          readOnly: true
        - name: openai
          mountPath: /etc/openai
          readOnly: true
        - name: tls-certs
          mountPath: /etc/tls
          readOnly: true      
      volumes:
      - name: assistant
        configMap:
          name: assistant      
      # This should contain your openai api key
      - name: openai
        secret:
          secretName: openai
      - name: tls-certs
        secret:
          secretName: tls-certs
